简单测试hid收发

--- a/USB-Screen/USB-Screen/MainWindow.xaml
+++ b/USB-Screen/USB-Screen/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <WrapPanel>
-        <Button Content="111"/>
+        <Button Content="111" Click="Button_Click"/>
     </WrapPanel>
 </Window>
