上位机可选使用硬件SPI还是软件SPI,上位机添加固件更新功能.

--- a/embedded/MasterTool/UsbScreen/UsbScreen/MainWindow.xaml
+++ b/embedded/MasterTool/UsbScreen/UsbScreen/MainWindow.xaml
@@ -22,18 +22,32 @@
 				<Button x:Name="MinSize" Style="{StaticResource Minimize}"/>
 				<Button x:Name="AppExit" Style="{StaticResource ExitButton}"/>
 			</StackPanel>
+			<ProgressBar x:Name="progress" Height="2" VerticalAlignment="Bottom" BorderThickness="0" Background="{x:Null}"/>
 		</Grid>
 		<DockPanel Background="#FFEEEEEE">
 			<Canvas x:Name="Preview" Width="240" ClipToBounds="True" Background="#888888">
 				<Image x:Name="ImageBox"  Canvas.Left="0" Canvas.Top="0"/>
-				<Image x:Name="ShowCapture"  Canvas.Left="0" Canvas.Top="0"/>
+				<Image x:Name="ShowCapture" Canvas.Left="0" Canvas.Top="0"/>
 			</Canvas>
 			<StackPanel x:Name="SysPanel" Margin="5">
 				<Label Content="设备列表:" Padding="0, 5"/>
 				<ComboBox DockPanel.Dock="Top" x:Name="DeviceList" Height="25" Focusable="False" Cursor="Hand"/>
-				<Button Content="载入图片" Height="25" Margin="0,5,0,0" Focusable="False" x:Name="LoadImg" Cursor="Hand"/>
-				<Button Content="屏幕捕获" Height="25" Margin="0,5,0,0" Focusable="False" x:Name="Capture" Cursor="Cross"/>
-				<Button Content="刷新图像" Height="25" Margin="0,5,0,0" Focusable="False" x:Name="Refresh" Cursor="Hand"/>
+				<Grid>
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="0.05*"/>
+						<ColumnDefinition Width="*"/>
+					</Grid.ColumnDefinitions>
+					<StackPanel Grid.Column="0">
+						<Button Content="载入图片" Height="25" Margin="0,5,0,0" Focusable="False" x:Name="LoadImg" Cursor="Hand"/>
+						<CheckBox x:Name="sspi" Content="使用软件SPI" Margin="10,5,0,0" Height="25" VerticalContentAlignment="Center"/>
+					</StackPanel>
+					<StackPanel Grid.Column="2">
+						<Button Content="屏幕捕获" Height="25" Margin="0,5,0,0" Focusable="False" x:Name="Capture" Cursor="Cross"/>
+						<Button Content="刷新图像" Height="25" Margin="0,5,0,0" Focusable="False" x:Name="Refresh" Cursor="Hand"/>
+					</StackPanel>
+				</Grid>
+				<Button Content="更新固件" Height="25" Margin="0,5,0,0" Focusable="False" x:Name="LoadHex" Cursor="Hand"/>
 
 			</StackPanel>
 		</DockPanel>
