--- a/CDC-Project/MasterTool/UsbScreen/App.xaml
+++ b/CDC-Project/MasterTool/UsbScreen/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="UsbDebugTool.App"
+﻿<Application x:Class="UsbScreen.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:UsbDebugTool"
+             xmlns:local="clr-namespace:UsbScreen"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
