--- a/ProjectCDC/Client/UsbScreen/MainWindow.xaml
+++ b/ProjectCDC/Client/UsbScreen/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:UsbScreen"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="MainWindow" Height="270" Width="480"
+        Title="Screen Control Console" Height="270" Width="480"
         Loaded="MainWindow_OnLoaded">
     <Window.Resources>
         <local:ConnectOrDisconnect x:Key="ConnectOrDisconnectConverter"/>
@@ -34,6 +34,25 @@
                 <ComboBox Name="PortComboBox" Width="130" Margin="3,0"></ComboBox>
                 <Button Name="ConnectButton" Margin="3,0" Width="50" Click="ConnectButton_OnClick" Content="{Binding IsConnected,Converter={StaticResource ConnectOrDisconnectConverter}}"/>
             </StackPanel>
+            <TextBlock Text="插件列表：" Grid.Row="5" VerticalAlignment="Center" Margin="5,0"/>
+            <Button Name="RefreshPluginButton" Content="刷新插件列表" Grid.Row="5" Margin="5,2" Width="80" HorizontalAlignment="Right"/>
+            <ComboBox Name="PluginComboBox" Grid.Row="6" Margin="5,2">
+                <ComboBoxItem Content="随便显示一个项目" IsSelected="True"/>
+            </ComboBox>
+            <Grid Grid.Row="7" Margin="0,0" Grid.RowSpan="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Button Name="EnablePluginButton" Content="启用" Margin="5,2" Grid.Column="0" Grid.Row="0"/>
+                <Button Name="DisablePluginButton" Content="停用" Margin="5,2" Grid.Column="0" Grid.Row="1"/>
+                <Button Name="OpenPluginFolderButton" Content="打开插件文件夹" Margin="5,2" Grid.Column="1" Grid.Row="0"/>
+                <Button Name="CheckUpdateButton" Content="检查新版本" Margin="5,2" Grid.Column="1" Grid.Row="1"/>
+            </Grid>
         </Grid>
     </Grid>
 </Window>
